--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,7 @@
 <html>
   <head>
     <title>99 Cats</title>
-    <%if logged_in?%>
-    <p>Welcome <%= current_user.username%>!</p>
-    <% end %>
-    <%if logged_in?%>
-    <a href= "<%= %>" 
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" >
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -17,6 +12,17 @@
   </head>
 
   <body>
+
+    <%if logged_in?%>
+    <p>Welcome <%= current_user.username%>!</p>
+    <form action = "<%=session_url%>" method = "post">
+      <input  type = "hidden" name = "_method" value = "DELETE">
+      <input type = "submit" value = "Log Out">
+    <%else%>
+      <a href="<%= new_session_url%>">Log In</a>
+      <a href="<%= new_user_url%>">Sign Up</a>
+    <% end %>
+
     <nav class="main-nav">
       <h1><a href="<%= cats_url %>">99 Cats</a></h1>
     </nav>
