--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<form action=”<%= users_url %>” method=”post”>
+<form action="<%= users_url %>" method="post">
 		<label> Username:
 		<input type= 'text' name= "user[username]" value= "" >
 		</label>
